# vercheck

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
docs/adr/: 0001-cli-v2-simplified-version-sources.md  0002-pre-commit-hooks-compliance-only.md
src/vercheck/: __main__.py  about.py  vercheck.py
tests/: __init__.py  hypothesis_test.py  main_test.py  pyproject_test.py
tests/data/: BAD-PKG-INFO  about.py  float_version.py  import_error.py  syntax_error.py
tests/data/pkg.egg-info/: PKG-INFO
tests/data/toml/: dynamic_pyproject.toml  malformed.toml.invalid  non_dict_intermediate.toml  non_string_version.toml  poetry.toml  top_level_version.toml
tests/data/toml/autodetect_both_match/: Cargo.toml
tests/data/toml/autodetect_both_mismatch/: Cargo.toml
