[tool.coverage.paths]
source = [
    "*/site-packages",
    "src",
]
tests = [
    "*/tests",
    "tests",
]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
source = [
    "tests",
    "vercheck",
]

[tool.isort]
force_single_line = true
lines_after_imports = 2
profile = "black"

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[tool.poetry]
authors = [
    "Christian Ledermann <christian.ledermann@gmail.com>",
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
description = "Vercheck"
documentation = "https://vercheck.readthedocs.io"
homepage = "https://github.com/cleder/vercheck"
license = "MIT"
name = "vercheck"
readme = "README.md"
repository = "https://github.com/cleder/vercheck"
version = "0.0.0"
